--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -10,6 +10,6 @@
   list-style: none;
 }
 .cards__text {
-  font-family: "Cabinet Grotesk", Arial, sans-serif;
+  font-family: "CabinetGrotesk-Regular", Arial, sans-serif;
   font-size: 27px;
 }
