--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -6,7 +6,7 @@
 }
 
 .card__name {
-  font-family: "Cabinet Grotesk", Arial, sans-serif;
+  font-family: "CabinetGrotesk-Regular", Arial, sans-serif;
   position: absolute;
   top: 15px;
   margin: 0;
