--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -10,6 +10,9 @@
   position: absolute;
   top: 15px;
   margin: 0;
+  padding: 2px 12px;
+  background-color: rgba(255, 255, 255, 1);
+  color: rgba(0, 0, 0, 0.6);
 }
 .card__image {
   width: 100%;
