--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -36,6 +36,16 @@
   width: 100%;
   border-radius: 20px;
 }
+
+.close__button {
+  width: 20px;
+  height: 20px;
+}
+.close__button:hover {
+  opacity: 100%;
+  cursor: pointer;
+  transition: opacity 0.5s;
+}
 .modal__form {
   display: flex;
   flex-direction: column;
@@ -79,11 +89,16 @@
 .modal__submit {
   width: 124px;
   height: 36px;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 1);
   color: rgba(255, 255, 255, 1);
   border-radius: 4px;
   border: none;
   gap: 8px;
   padding: 8px 16px;
   margin-top: 28px;
+}
+.modal__submit:hover {
+  opacity: 0.6;
+  cursor: pointer;
+  transition: opacity 0.5s;
 }
