--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -13,6 +13,7 @@
   padding: 2px 12px;
   background-color: rgba(255, 255, 255, 1);
   color: rgba(0, 0, 0, 0.6);
+  border-radius: 4px;
 }
 .card__image {
   width: 100%;
