--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -8,4 +8,9 @@
 }
 .footer__text {
   font-family: "CabinetGrotesk-Regular", Arial, sans-serif;
+  font-weight: 500;
+  font-style: Medium;
+  font-size: 16px;
+  letter-spacing: 0%;
+  text-align: right;
 }
