--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -16,12 +16,17 @@
   border-width: 1px;
 }
 .header__username {
-  width: 160px;
   height: 16px;
   font-family: "CabinetGrotesk-Regular", Arial, sans-serif;
   font-size: 20px;
+  font-weight: 700;
+
   line-height: 100%;
-  margin: 0;
+
+  margin: 12px;
+}
+.header__user-name {
+  display: flex;
 }
 .header__add-clothes-btn {
   margin: 0 20px 0 auto;
@@ -29,22 +34,30 @@
   height: 24px;
   font-family: "CabinetGrotesk-Regular", Arial, sans-serif;
   font-size: 20px;
+  font-weight: 700;
   line-height: 24px;
   border: none;
 }
 .header__date-and-location {
-  margin: 0;
+  margin: 12px;
   width: 180px;
   height: 10px;
   font-family: "CabinetGrotesk-Regular", Arial, sans-serif;
-  font-size: 20px;
+  font-size: 19px;
+  font-weight: 700;
   line-height: 24px;
   color: rgba(0, 0, 0, 1);
 }
-
+.header__container {
+  display: flex;
+}
 .header__user-container {
   display: flex;
   align-items: center;
   gap: 12px;
   margin-left: auto;
+}
+.header__link {
+  text-decoration: none;
+  color: black;
 }
