--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,20 +10,20 @@
   margin-right: 24px;
 }
 .header__avatar {
-  width: 40px;
-  height: 40px;
-  left: 1320px;
+  width: 55px;
+  height: 55px;
   border-width: 1px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 2px solid #ccc;
 }
 .header__username {
   height: 16px;
   font-family: "CabinetGrotesk-Regular", Arial, sans-serif;
   font-size: 20px;
   font-weight: 700;
-
   line-height: 100%;
-
-  margin: 12px;
+  margin: 20px;
 }
 .header__user-name {
   display: flex;
@@ -40,7 +40,7 @@
 }
 .header__date-and-location {
   margin: 12px;
-  width: 180px;
+  width: 200px;
   height: 10px;
   font-family: "CabinetGrotesk-Regular", Arial, sans-serif;
   font-size: 19px;
@@ -60,4 +60,11 @@
 .header__link {
   text-decoration: none;
   color: black;
+}
+
+.header__auth-btn {
+  width: 67px;
+  height: 24px;
+  opacity: 1;
+  border: none;
 }
