--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -8,13 +8,35 @@
 .card__name {
   font-family: "CabinetGrotesk-Regular", Arial, sans-serif;
   position: absolute;
-  top: 15px;
-  margin: 0;
-  padding: 2px 12px;
+  top: -25px;
+  left: 39px;
+  margin: 45px 61px;
+  padding: 0 31px;
   background-color: rgba(255, 255, 255, 1);
   color: rgba(0, 0, 0, 0.6);
-  border-radius: 4px;
+  border-radius: 5px;
 }
 .card__image {
   width: 100%;
+  border-radius: 8px;
+}
+
+.card__like-button {
+  position: absolute;
+  top: 22px;
+  right: 37px;
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+}
+
+.card__like-button-icon {
+  width: 24px;
+  height: 24px;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.card__like-button:hover .card__like-button-icon {
+  transform: scale(1.1);
 }
