--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -13,4 +13,15 @@
 .sidebar__avatar {
   width: 56px;
   height: 56px;
+  border-width: 1px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 2px solid #ccc;
+}
+.sidebar__logout-button {
+  display: flex;
+  padding-top: 13px;
+  border: none;
+  width: 66px;
+  height: 25px;
 }
